--- a/app/src/main/res/layout/config_entry_list_item.xml
+++ b/app/src/main/res/layout/config_entry_list_item.xml
@@ -28,6 +28,7 @@
 
     <!--Main Layout-->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground">
