--- a/app/src/main/res/layout/dialogfragment_keyvalues.xml
+++ b/app/src/main/res/layout/dialogfragment_keyvalues.xml
@@ -18,6 +18,7 @@
         android:id="@+id/key"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:autofillHints="key"
         android:hint="@string/key"
         android:inputType="textPersonName"
         android:padding="5dp"
@@ -29,6 +30,7 @@
         android:id="@+id/value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints="value"
         android:hint="@string/value"
         android:inputType="textPersonName"
         android:padding="5dp"
