--- a/app/src/main/res/layout/config_entry_list_item.xml
+++ b/app/src/main/res/layout/config_entry_list_item.xml
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:text="@string/delete"
             android:textColor="@android:color/white"
-            tool:targetApi="m" />
+            tool:ignore="UnusedAttribute" />
     </LinearLayout>
 
     <!--Main Layout-->
