--- a/app/src/main/res/layout/key_value_list_item.xml
+++ b/app/src/main/res/layout/key_value_list_item.xml
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:text="@string/delete"
             android:textColor="@android:color/white"
-            tool:targetApi="m" />
+            tool:ignore="UnusedAttribute" />
     </LinearLayout>
 
     <!--Main Layout-->
@@ -38,7 +38,6 @@
             android:id="@+id/key"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +46,6 @@
             android:id="@+id/value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
