--- a/app/src/main/res/layout/config_entry_list_item.xml
+++ b/app/src/main/res/layout/config_entry_list_item.xml
@@ -15,6 +15,17 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/clone"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@color/design_default_color_primary_dark"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="@string/clone"
+            android:textColor="@android:color/white"
+            tool:ignore="UnusedAttribute" />
+
+        <TextView
             android:id="@+id/delete"
             android:layout_width="100dp"
             android:layout_height="match_parent"
