--- a/exampleapp/src/main/res/layout/main_fragment.xml
+++ b/exampleapp/src/main/res/layout/main_fragment.xml
@@ -8,12 +8,10 @@
     tools:context=".ui.main.MainFragment">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/output"
         android:layout_width="wrap_content"
+        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:text="MainFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
