--- a/exampleapp/src/main/res/layout/main_fragment.xml
+++ b/exampleapp/src/main/res/layout/main_fragment.xml
@@ -8,11 +8,40 @@
     tools:context=".ui.main.MainFragment">
 
     <TextView
-        android:id="@+id/output"
+        android:id="@+id/authorityTitle"
         android:layout_width="wrap_content"
-        android:padding="5dp"
         android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/authority_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/authority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/authority"
+        android:textIsSelectable="true"
+        app:layout_constraintBaseline_toBaselineOf="@+id/authorityTitle"
+        app:layout_constraintStart_toEndOf="@+id/authorityTitle" />
+
+    <TextView
+        android:id="@+id/keyValuesTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/keyValueTitle"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/authorityTitle" />
+
+    <TextView
+        android:id="@+id/output"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/keyValuesTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
